--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,1 +1,11 @@
 @import "./colors.css";
+
+body {
+    overflow: hidden;
+    -ms-overflow-style: none;  /* IE and Old Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+}
