--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,12 @@
 @import "./colors.css";
 
 body {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    color: var(--common-font-secondary);
+    background-color: var(--common-bg);
+
     overflow: hidden;
     -ms-overflow-style: none;  /* IE and Old Edge */
     scrollbar-width: none;  /* Firefox */
@@ -8,4 +14,8 @@ body {
 
 body::-webkit-scrollbar {
     display: none; /* Hide scrollbar for Chrome, Safari and Opera */
+}
+
+#hidden {
+    display: none;
 }
