--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -8,6 +8,11 @@
   --common-delete: #ff0000;
   --common-warn: #FF8000;
 
+  --error-title-bg: #FF4D4D;
+  --error-title-color: #dcddde;
+  --error-text-bg: #FF9999;
+  --error-text-color: black;
+
   --common-bg: #36393f;
   --common-bg-light: #4B4F58;
   --common-bg-dark: #26282C;
